force-app/main/default/objects/SBQQ__ProductOption__c/fields/Orchestrator_Disaster_Recovery_Option__c.field-meta.xml
<CustomField>
        <fullName>Orchestrator_Disaster_Recovery_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Orchestrator Disaster Recovery Option</label>
        <type>Checkbox</type>
    </CustomField>