force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__AppliedImmediatelyContext__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AppliedImmediatelyContext__c</fullName>
        <description>&#39;Apply Immediately on Select&#39; applies changes immediately on selection of product, whereas &#39;Apply Immediately on Quantity Change&#39; does that on change of quantity. &#39;Always&#39; applies changes both the times, on selection of product and on change of quantity.</description>
        <inlineHelpText>&#39;Apply Immediately on Select&#39; applies changes immediately on selection of product, whereas &#39;Apply Immediately on Quantity Change&#39; does that on change of quantity. &#39;Always&#39; applies changes both the times, on selection of product and on change of quantity.</inlineHelpText>
        <label>Apply Immediately Context</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>On Selection</fullName>
                </value>
                <value>
                    <fullName>On Quantity Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>