force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__Discount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Discount (%), based on the field, when the product referenced for this option is offered standalone. But, you&#39;ll need to extend a discount if purchased a part of this product bundled.</description>
        <inlineHelpText>Enter a Discount (%), based on the field, when the product referenced for this option is offered standalone. But, you&#39;ll need to extend a discount if purchased a part of this product bundled.</inlineHelpText>
        <label>Discount (%)</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Percent</type>
    </CustomField>