force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__DiscountAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DiscountAmount__c</fullName>
        <description>Discount (Amt), based on the field, when the product referenced for this option is offered standalone. But, you&#39;ll need to extend a discount if purchased a part of this product bundled.</description>
        <inlineHelpText>Discount (Amt), based on the field, when the product referenced for this option is offered standalone. But, you&#39;ll need to extend a discount if purchased a part of this product bundled.</inlineHelpText>
        <label>Discount (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>