force-app/main/default/objects/SBQQ__ProductOption__c/fields/SBQQ__QuantityEditable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuantityEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether option quantity is editable regardless of Quantity being specified.</description>
        <inlineHelpText>Check to allow quantity to be edited even though it&#39;s specified on the option.</inlineHelpText>
        <label>Quantity Editable</label>
        <type>Checkbox</type>
    </CustomField>