force-app/main/default/objects/SBQQ__ProductOption__c/fields/Services_Delivered_By__c.field-meta.xml
<CustomField>
        <fullName>Services_Delivered_By__c</fullName>
        <label>Services Delivered By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UiPath</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>