force-app/main/default/objects/SBQQ__ProductOption__c/validationRules/SBQQ__Cannot_Bundle_Evergreen_Renewable_SKUs.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Cannot_Bundle_Evergreen_Renewable_SKUs</fullName>
        <active>true</active>
        <description>The Evergreen and Renewable bundle cannot coexist in a bundle</description>
        <errorConditionFormula>AND(OR(AND(ISPICKVAL( SBQQ__ConfiguredSKU__r.SBQQ__SubscriptionType__c , &#39;Evergreen&#39;), ISPICKVAL( SBQQ__OptionalSKU__r.SBQQ__SubscriptionType__c ,&#39;Renewable&#39;)),AND(ISPICKVAL( SBQQ__ConfiguredSKU__r.SBQQ__SubscriptionType__c , &#39;Renewable&#39;),ISPICKVAL( SBQQ__OptionalSKU__r.SBQQ__SubscriptionType__c ,&#39;Evergreen&#39;))))</errorConditionFormula>
        <errorMessage>Can’t include evergreen and renewable products in the same bundle.</errorMessage>
    </ValidationRule>